project1&2/terraform-aws-lab/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "lab-igw"
  }
}
